--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,13 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": false,
+  "bracketSameLine": true,
+  "bracketSpacing": false,
+  "requirePragma": true,
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 100,
-  "trailingComma": "none",
+  "trailingComma": "all",
+  "endOfLine": "lf",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
