update better comm style and fix sign-out

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     }],
     "no-console": ["error", { "allow": ["warn", "error"] }],
     "object-curly-spacing": ["error", "always"],
-    "object-curly-newline": ["warn", { "consistent": true }]
+    "object-curly-newline": ["warn", { "consistent": true }],
+    "comma-dangle": ["error", "never"]
   }
 }
