--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:vue/vue3-recommended"
+    "plugin:vue/vue3-recommended",
+    "@vue/typescript/recommended"
   ],
   "parser": "vue-eslint-parser",
   "parserOptions": {
@@ -25,7 +26,8 @@
       "caughtErrorsIgnorePattern": "^ignore",
       "ignoreRestSiblings": false
     }],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-undef": "error",
+    "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "object-curly-spacing": ["error", "always"],
     "object-curly-newline": ["warn", { "consistent": true }],
     "array-bracket-spacing": ["error", "always"],
