--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@unhead/vue": "^1.10.4",
-    "@vueuse/core": "^10.11.1",
+    "@unhead/vue": "^1.11.2",
+    "@vueuse/core": "^11.0.3",
     "dayjs": "^1.11.13",
     "pinia": "^2.2.2",
     "qrcode": "^1.5.4",
-    "vue": "^3.5.1",
+    "vue": "^3.5.4",
     "vue-camera-lib": "^1.0.6",
-    "vue-i18n": "^9.14.0",
-    "vue-router": "^4.4.3"
+    "vue-i18n": "^10.0.1",
+    "vue-router": "^4.4.4"
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.7.22",
+    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
-    "@rushstack/eslint-patch": "^1.8.0",
+    "@rushstack/eslint-patch": "^1.10.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.8",
+    "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.14.5",
+    "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -40,19 +40,20 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "jsdom": "^24.1.0",
-    "npm-run-all2": "^6.2.0",
-    "postcss": "^8.4.41",
-    "prettier": "^3.2.5",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "jsdom": "^25.0.0",
+    "npm-run-all2": "^6.2.2",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
-    "typescript": "~5.4.0",
-    "typescript-eslint": "^8.1.0",
-    "vite": "^5.4.3",
-    "vite-plugin-vue-devtools": "^7.4.4",
-    "vitest": "^1.6.0",
+    "tailwindcss": "^3.4.11",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.5.0",
+    "vite": "^5.4.4",
+    "vite-plugin-preload": "^0.4.2",
+    "vite-plugin-vue-devtools": "^7.4.5",
+    "vitest": "^2.1.0",
     "vue-tsc": "^2.1.6"
   }
 }
