update date json to production

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@unhead/vue": "^1.11.7",
     "@vueuse/core": "^11.1.0",
+    "chart.js": "^4.4.4",
     "dayjs": "^1.11.13",
     "pinia": "^2.2.4",
     "qrcode": "^1.5.4",
