--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.5.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/eslint-config-prettier": "^10.0.0",
@@ -55,6 +56,7 @@
     "vite-plugin-preload": "^0.4.2",
     "vite-plugin-vue-devtools": "^7.4.5",
     "vitest": "^2.1.0",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.6"
   }
 }
